# PandD_imagens

./: .gitignore  README.md  main.ipynb  pyproject.toml
