[tool.poetry]
name = "pandd-imagens"
version = "0.1.0"
description = ""
authors = ["yendorr <ro.rss.129@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.42.0"
groq = "^0.13.1"
openai = "^1.58.1"
google-generativeai = "^0.8.3"
tqdm = "^4.67.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
